Wow visible-before-animating bugfix

--- a/css/Felewin-baseline.css
+++ b/css/Felewin-baseline.css
@@ -245,3 +245,8 @@ button:focus {
 .block-padded {
 	padding: 2em;
 }
+
+/* Wow visible-before-animating bugfix */
+.wow {
+	visibility: hidden;
+}
